Closed Bug 501815 Opened 16 years ago Closed 16 years ago

All drop types are valid for Flash content

Categories

(Core :: DOM: Copy & Paste and Drag & Drop, defect)

1.9.1 Branch
x86
Windows Vista
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Natch, Assigned: enndeakin)

References

Details

(Keywords: polish, regression, ue)

Attachments

(1 file)

Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1) Gecko/20090624 Firefox/3.5 STR: 1) Go to any youtube video (eg http://www.youtube.com/watch?v=hpkitLUbeEg ). 2) drag *anything* (picture, selected text, etc.) over the video. 3) The cursor changes to the drop-allowed cursor.
Flags: wanted1.9.2?
Flags: blocking1.9.2?
Tested and cancels a drop properly. A java plugin that accepts file drops at http://upload.thinfile.com/upload/demo.php still functions.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #395606 - Flags: review?(Olli.Pettay)
Comment on attachment 395606 [details] [diff] [review] set effectAllowed to none for plugins > if (mInstance) { > nsCOMPtr<nsIDOMDragEvent> dragEvent = do_QueryInterface(aEvent); > if (dragEvent) { >+ nsAutoString eventType; >+ aEvent->GetType(eventType); >+ if (eventType.EqualsLiteral("dragenter") || eventType.EqualsLiteral("dragover")) { >+ // set the allowed effect to none here. The plugin should set it if necessary >+ nsCOMPtr<nsIDOMDataTransfer> dataTransfer; >+ dragEvent->GetDataTransfer(getter_AddRefs(dataTransfer)); >+ dataTransfer->SetEffectAllowed(NS_LITERAL_STRING("none")); Add a null check for dataTransfer. I think the method should also check that event is trusted.
Attachment #395606 - Flags: review?(Olli.Pettay) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Neil, do we want this on 1.9.2? If so, can you put a patch up for approval?
Flags: wanted1.9.2?
Flags: blocking1.9.2?
Flags: blocking1.9.2-
Attachment #395606 - Flags: approval1.9.2?
Attachment #395606 - Flags: approval1.9.2? → approval1.9.2.2?
Comment on attachment 395606 [details] [diff] [review] set effectAllowed to none for plugins Didn't make 1.9.2.2, but wanted for 1.9.2.3
Attachment #395606 - Flags: approval1.9.2.2? → approval1.9.2.3?
Comment on attachment 395606 [details] [diff] [review] set effectAllowed to none for plugins Unfortunately will have to minus because this doesn't match the check-in -- we've found too many times people back-port patches from bugs rather than the changeset. Please request approval on an updated patch that includes Olli's review comments.
Attachment #395606 - Flags: approval1.9.2.4? → approval1.9.2.4-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: