Bug 501815, don't allow drops on plugins, r=smaug